--- a/sentences/sv/_common.yaml
+++ b/sentences/sv/_common.yaml
@@ -52,7 +52,7 @@ expansion_rules:
   vad: "(vad är | vad är det | vad är det för | vilken)"
   är: "(är det | är)"
   brightness: "{brightness} [percent]"
-  slå_på: "( tänd | sätt på | slå på | starta )"
+  slå_på: "( tänd | sätt[a] på | slå på | starta )"
   slå_av: "( släck | stäng av | stoppa )"
   i_på: "(i | på | vid | bredvid)"
   temp: "(temperatur)"
@@ -66,3 +66,4 @@ skip_words:
   - "snälla"
   - "tack"
   - "vänligen"
+  - "kan du"
